--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Reelables</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">	
 </head>
@@ -136,7 +135,7 @@
 						<h1 class="text__title">Bluetooth smart labels at $1 in volume</h1>
                   <p class="text__p">Reelables’ labels come on reels and feed into industrial printers. <br>They stick to packages, shipping labels, boxes of inventory, safety <br>equipment, and even tools & equipment.</p>
 					</div>
-					<div class="labels__img col-12 col-xl-5 "><img src="img/smart__labels.png" alt=""></div>
+					<div class="labels__img col-xl-5 "><img src="img/smart__labels.png" alt=""></div>
 				</div>
 			</div>
 		</section>
