--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<h1 class="text__title">Bluetooth smart labels at $1 in volume</h1>
                   <p class="text__p">Reelables’ labels come on reels and feed into industrial printers. <br>They stick to packages, shipping labels, boxes of inventory, safety <br>equipment, and even tools & equipment.</p>
 					</div>
-					<div class="labels__img col-xl-5 "><img src="img/smart__labels.png" alt=""></div>
+					<div class="labels__img col-12 col-xl-5 "><img src="img/smart__labels.png" alt=""></div>
 				</div>
 			</div>
 		</section>
